# ch32v003j4m6-ds130

./: Cargo.toml  README.md
kicad/: ch32v003j4m6-ds1302.kicad_pcb  ch32v003j4m6-ds1302.kicad_pro  ch32v003j4m6-ds1302.kicad_sch  ch32v003j4m6.kicad_sym  ch32v004jm6-ds1302.kicad_pcb  ch32v004jm6-ds1302.kicad_pro  ch32v004jm6-ds1302.kicad_sch  rename-for-elecrow.sh
src/: main.rs
