[package]
name = "ch32v003j4m6-ds1302"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch32v-rt = "0.0.3"
ch32v00x-hal = { version = "0.1.0", git = "https://github.com/ch32-rs/ch32v00x-hal.git", default-features = false, features = ["ch32v003j4m6"] }
panic-halt = "0.2.0"
qingke = "0.1.3"
embedded-hal = "0.2.7"
fugit = "0.3.7"

[profile.dev]
opt-level = "z"
lto = true

[profile.release]
strip = false
lto = true
opt-level = "z" # Optimize for size.
